--- a/loginpage.html
+++ b/loginpage.html
@@ -6,24 +6,38 @@
 <body>
     <form id="loginForm" action="action_page.php" method="post">
         <div class="container">
+
+            <h3>Group 3 Login</h3>
+
             <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" required> 
+            <input type="text" placeholder="Enter Username" name="username" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required> 
+            <input type="password" placeholder="Enter Password" name="password" required>
 
             <button type="submit">Login</button>
-            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
-        </div>
 
-        <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
-    </form>
+            <!--
 
-    <script src="script.js"></script> <!-- Link to the JavaScript file -->
+
+        <label>
+            <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+    </div>
+
+                    -->
+            <!--
+    </body>
+    <div class="container" style="background-color:#f1f1f1">
+        <button type="button" class="cancelbtn">Cancel</button>
+        <span class="psw">Forgot <a href="#">password?</a></span>
+    </div>
+
+        -->
+</form>
+
+
+
+<script src="script.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
