--- a/loginpage.html
+++ b/loginpage.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome Page</title>
     <link rel="stylesheet" href="loginpage.css">
 </head>
 <body>
-    <form id="loginForm" action="action_page.php" method="post">
-        <div class="container">
+    <div class="container">
+        <h3>Group 3 Login</h3>
+
+        <!-- Add the form tag with an onsubmit attribute -->
+        <form id="loginForm" onsubmit="login(); return false;">
             <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" required> 
+            <input type="text" placeholder="Enter Username" name="username" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required> 
+            <input type="password" placeholder="Enter Password" name="password" required>
 
-            <button type="submit">Login</button>
-            <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
-            </label>
-        </div>
+            <!-- The type="submit" will allow the form to be submitted by pressing Enter -->
+            <button type="submit" class="login-button">Login</button>
+        </form>
+    </div>
 
-        <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
-        </div>
-    </form>
-
-    <script src="script.js"></script> <!-- Link to the JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
