--- a/signIn.html
+++ b/signIn.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
+    <title>SignInPage</title>
     <link rel="stylesheet" href="loginpage.css">
 </head>
 <body>
     <div class="container">
-        <h3>Group 3 Login</h3>
+        <h3>Sign In</h3>
 
-        <form id="loginForm" onsubmit="login(); return false;">
+        <form id="loginForm" onsubmit="redirectOnSignIn(); return false;">
             <label for="uname"><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="username" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
 
-            <button type="submit" class="login-button">Login</button>
+            <label for="psw"><b>Confirm Password</b></label>
+            <input type="password" placeholder="Confirm Password" name="password" required>
 
-            <a href="signIn.html">Sign In</a>
-
+            <button type="submit" class="login-button">Sign In</button>
         </form>
     </div>
-    <script src="script.js"></script> <!-- Link to the JavaScript file -->
+
+    <script>
+        function redirectOnSignIn() {
+            window.location.href = "emailConfirm.html";
+        }
+    </script>
 </body>
 </html>
