--- a/signIn.html
+++ b/signIn.html
@@ -24,10 +24,6 @@
         </form>
     </div>
 
-    <script>
-        function redirectOnSignIn() {
-            window.location.href = "emailConfirm.html";
-        }
-    </script>
+    <script src="signIn.js"></script> 
 </body>
 </html>
