--- a/loginpage.html
+++ b/loginpage.html
@@ -23,6 +23,6 @@
 
         </form>
     </div>
-    <script src="script.js"></script> <!-- Link to the JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
