have created all necessary files for sign up page creation. further revisions will be done on AWS.

--- a/dashboard.html
+++ b/dashboard.html
@@ -12,6 +12,6 @@
         <button class="logout-button" onclick="logout()">Logout</button>
     </div>
 
-    <script src="script.js"></script> <!-- Link to the JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
