--- a/loginpage.html
+++ b/loginpage.html
@@ -19,7 +19,7 @@
 
             <button type="submit" class="login-button">Login</button>
 
-            <a href="signIn.html">Sign In</a>
+            <a href="signUp.html">Sign Up</a>
 
         </form>
     </div>
