--- a/signUp.html
+++ b/signUp.html
@@ -8,20 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <h3>Sign In</h3>
+        <h3>Sign Up</h3>
 
-        <form id="loginForm" onsubmit="redirectOnSignIn(); return false;">
+        <form id="loginForm" onsubmit="signUp(); return false;">
             <label for="uname"><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="username" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
 
-            <label for="psw"><b>Confirm Password</b></label>
-            <input type="password" placeholder="Confirm Password" name="password" required>
-
             <button type="submit" class="login-button">Sign In</button>
         </form>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
