--- a/loginpage.html
+++ b/loginpage.html
@@ -12,17 +12,17 @@
 
         <form id="loginForm" onsubmit="login(); return false;">
             <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="username" required>
+            <input type="text" placeholder="Enter Username" name="username" autocomplete="username" required>
 
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required>
+            <input type="password" placeholder="Enter Password" name="password" autocomplete="current-password" required>
 
             <button type="submit" class="login-button">Login</button>
 
-            <a href="signUp.html">Sign Up</a>
-
+            <div class="signup-link">Not a user? <a href="signUp.html">Sign Up here</a></div>
         </form>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
