--- a/signUp.html
+++ b/signUp.html
@@ -17,7 +17,7 @@
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
 
-            <button type="submit" class="login-button">Sign In</button>
+            <button type="submit" class="login-button">Sign Up</button>
         </form>
     </div>
     <script src="script.js"></script>
