Added an email to SignUp Form

--- a/signUp.html
+++ b/signUp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SignInPage</title>
+    <title>SignUpPage</title>
     <link rel="stylesheet" href="loginpage.css">
 </head>
 <body>
@@ -14,6 +14,9 @@
             <label for="uname"><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="username" required>
 
+            <label for="email"><b>Email</b></label>
+            <input type="email" placeholder="Enter Email" name="email" required>
+
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="password" required>
 
@@ -23,3 +26,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
